<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Profile.AboutActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="left"
        android:text="@string/tentang"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                style="@style/TextContent"
                android:text="Tentang Aplikasi"
                android:textSize="30sp" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                style="@style/TextContent"
                android:lineSpacingMultiplier="1"
                android:text="@string/about_app"
                android:textSize="15sp" />

            <TextView
                style="@style/TextContent"
                android:lineSpacingMultiplier="1"
                android:text="@string/kontak_tertera"
                android:textSize="15sp" />

            <TextView
                style="@style/TextContent"
                android:lineSpacingMultiplier="1"
                android:text="@string/rifkyramzi22_gmail_com"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/PrimaryColor"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_home_white" />

        <ImageView
            android:id="@+id/btn_kuis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_kuis_white" />

        <ImageView
            android:id="@+id/btn_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_akun_black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>