<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Hukum.HukumMimMatiActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="left"
        android:text="@string/hukum_baca_mim_mati"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_izharsyafawi"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="220dp"
        android:background="@drawable/btn_pink"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/izharsyafawi"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_idghammimi"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_pink"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/idghammimi"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_izharsyafawi"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ikhfasyafawi"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/btn_pink"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ikhfasyafawi"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_izharsyafawi" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/PrimaryColor"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_home_black" />

        <ImageView
            android:id="@+id/btn_kuis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_kuis_white" />

        <ImageView
            android:id="@+id/btn_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_akun_white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>